--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
+/* Import design tokens */
+@import './design-tokens/css-variables.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
